<resources>
    <string name="app_name">InstituteOfMining</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_title">КЫРГЫЗСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ ГЕОЛОГИИ, ГОРНОГО ДЕЛА И ОСВОЕНИЯ ПРИРОДНЫХ РЕСУРСОВ ИМЕНИ АКАДЕМИКА УСЕНГАЗЫ АСАНАЛИЕВА</string>
    <string name="short_description">\n Кафедра Информационные технологии и математическое моделирование была открыта Решением Ученого Совета Горно-металлургического Института в июле 1996 года с целью подготовки высококвалифицированных специалистов, и обеспечения более полного и углубленного изучения современных компьютерных технологий и основ программирования при подготовке студентов всех специальностей Горно-металлургического Института. Инициатором приглашения Жайнакова А.Ж. для основания, создания материально-технической базы и формирования профессорско-преподавательского состава кафедры был первый ректор Горно-металлургического института академик У.Асаналиев.</string>
    <string name="home_title"><![CDATA[Кафедра: Информационные технологии и математическое моделирование им.акад. А.Жайнакова]]></string>
    <string name="computer_technology">Компьютерная технология это цивилизация будущего</string>
    <string name="home_the_words_of_the_director">Заведующий кафедрой, академик НАН КР, доктор физико-математических наук, профессор, заслуженный деятель науки, Народный учитель и лауреат Государственной премии Кыргызской Республики.</string>
    <string name="activity">Деятельность</string>
    <string name="home_name_ja">Жайнаков Аманбек Жайнакович</string>
    <string name="home_paragraph_1">\n Основной целью деятельности кафедры является подготовка специалистов в области Информационных систем и технологий, а также преподавание информатики и информационных технологий для студентов всех специальностей института, прививая им навыки владения компьютерной техникой и обучая основам программирования и численных методов математического моделирования в соответствии с образовательным стандартом высшего профессионального образования КР. В связи с бурным развитием информационных технологий и внедрением их во все области деятельности возникла необходимость подготовки специалистов владеющих современными компьютерными технологиями в горной отрасли.</string>
    <string name="home_paragraph_2">\n В 1999 году разработан пакет документов и получена лицензия на образовательную деятельность по направлению 552801 «Информатика и вычислительная техника» по специальностям: «Программное обеспечение вычислительной техники и автоматизированных систем»; и «Автоматизированные системы обработки информации и управления» на базе кафедры Информационные технологии и математическое моделирование горно-металлургического институт им. академика У.Асаналиева. В 2000-2001 учебном году кафедра осуществила набор студентов по направлению «Информатика и вычислительная техника», в количестве 44 студентов по специальностям «Программное обеспечение вычислительной техники и автоматизированных систем», «Автоматизированные системы обработки информации и управления» с присвоением квалификации «Инженер».</string>
    <string name="home_paragraph_3">\n С 2006-2007 учебного года кафедра дополнительно получила лицензию на образовательную деятельность по направлению 552802.01 «Информационные системы и технологии» с присвоением квалификации «Инженер». Коллектив кафедры ведут активную деятельность по учебно-методической, научной — исследовательской и воспитательной работе. Были разработаны программы прохождения учебной, производственной, преддипломной практик, учебно-методические пособия, руководства по проведению лабораторных работ, курсовых работ для студентов данного направления. Налажены связи и заключены договора с Институтом Физики, Автоматики, Математики, Механики НАН КР, с кафедрой «ПОВТ» КГУСТА и др.</string>
    <string name="home_paragraph_4">\n Подготовка инженеров по данной специальности продиктована потребностью инженеров со знанием современных информационных систем и технологий в горной отрасли народного хозяйства Кыргызской Республики. Подготовка высококвалифицированных кадров с более полным и углубленным изучением современных компьютерных технологий и систем с основами программирования является в настоящее время актуальной задачей. С 2012 -2013 учебного года кафедра участвовала в разработке ГОС ВПО третьего поколения и является держателем стандарта по профилю710100 «Автоматизированные системы обработки информации и управления 710200 «Информационные системы и технологии в горном деле». Разработаны кафедрой и утверждены экспертной комиссией и коллегией МОН КР примерные учебные планы.</string>
    <string name="home_paragraph_5">\n По подготовке кадров по смежным специальностям путем постановки новых дисциплин по автоматизации проектирования горно-геологических данных и разработке учебно-методических комплексов адаптированных для соответствующих специальностей горной отрасли КР с учетом требований кредитной технологии обучения налаживаются связи между кафедрами КГГУ им.У. Асаналиева и работодателями. С 1999 г. кафедра является выпускающей образовательной структурой и осуществляет научно-образовательную, учебно-методическую, организационно-воспитательную деятельность.</string>
    <string name="home_title_2"> \n Приоритетное открытие и развитие этой кафедры связано с тем, что информационные технологии определяют основу потребностей по всем отраслям общества. В настоящее время информационные технологии и математическое моделирование являются эффективным инструментом исследования в различных областях науки. Знание компьютерных технологий, умение пользоваться современными системными и прикладными компьютерными программами стало жизненно необходимым компонентом в Вузовском образовании.</string>
    <string name="life_text_1"> <b>Научное направление кафедры</b>
	На кафедре ведется научно-исследовательская работа по следующим направлениям:
        \n \n <b>1.«Математическое моделирование физических процессов при взаимодействии потоков энергии с веществом с применением новых компьютерных технологий»</b>
        \n \n <b>2.«Новые информационные технологии в образовании».</b>
</string>
    <string name="life_text_2">\n При проведении научно-исследовательских работ кафедра активно сотрудничает с рядом университетов, научно-исследовательских институтов, таких как: Институт вычислительных технологий,  Институт теоретической и прикладной механики им. С. А. Христиановича СО РАН,  механико-математический факультет и НИИ механики и математики Казахский государственный университет имени Аль-Фараби, Институт Физики, Автоматики, Технической и прикладной математики НАН КР,  Вузами  Республики.</string>
    <string name="life_text_4">\n Сотрудники кафедры являются членами программного комитета периодической Международной конференции «Информационные технологии и математическое моделирование в науке, технике и образовании», редакционной коллегии журнала «Вычислительные технологии» Института вычислительных технологий Сибирского отделения РАН http://www.ict.nsc.ru/jct/editorial_board и Вестника «Математика, механика, информатика» Казахского Национального Университета им.Аль-Фараби и являются членами диссертационного совета -14.01.04. «Теплофизика и теоретическая теплотехника» в Институте физико-технических проблем и материаловедения НАН КР по защите докторских и кандидатских диссертаций http://naskr.kg/ru/2019/06/30/dissertacionnye-sovety/, что является важным инструментом учебного процесса по подготовке и поддержке студентов при написании научных статьей и участие в научных конференциях молодых ученных (НИРС), а также стимулом для  продолжения научно –исследовательской работы в магистратуре.</string>
    <string name="life_text_5">\n <b>НИР и НИРС</b>
        В 06-08 октября 2016 года кафедра проводила Международной научной конференции <b>«Информационные технологии и математическое моделирование в науке, технике и образовании» посвященной 75-летию академика НАН КР, народного учителя КР, профессора доктора физико-математических наук  <b>Жайнакова Аманбека</b> и 20 летию кафедры «Информационных технологий и математического моделирования имени академика Жайнакова Аманбека»</b> в Кыргызском техническом университете им.И.Раззакова, в которой принимали участие известные ученные России, Сербии, Германии, Узбекистана, Казахстана и Кыргызстана, а также активно участвовали  преподаватели, магистры и студенты кафедры ИТиММ и КГТУ им. И. Раззакова (http://ousnano.sbras.ru/news.php?PageID=6266).</string>
    <string name="life_text_3">
        <b>компьютерный класс аудитория 1/41;</b>
        \n \n <b>компьютерный класс аудитория 1/43;</b>
        \n \n <b>компьютерный класс аудитория 1/45;</b>
</string>
    <string name="life_text_7">\n ППС кафедры также ведет научную работу в рамках проекта, финансируемого по гранту Министерство образования и науки КР, проводимые в Институте минерального сырья КГТУ им. И. Раззакова по теме «Разработка высокотемпературной технологии обработки твердых отходов на основе комплексных исследований»</string>
    <string name="life_text_8">\n В учебном процессе используются результаты научных исследований, проведенных сотрудниками кафедры. По результатам научно-исследовательских работ кафедры защищена 2 докторская, 4 кандидатских диссертации. За годы существования опубликованы более 300 научных и учебно-методических работ, в том числе 8 монографий, 10 учебных пособий, более 400 научных статей в ведущих научных журналах (из списка ВАК), в том числе зарубежных.</string>
    <string name="life_text_6">\n На конференции рассматривались следующие проблемы: магнитная газовая динамика, управление технологическими параметрами дуги, моделирование технических систем, моделирование нелинейных систем, численное решение задач в технике и охране окружающей среды, развитие космических технологий, моделирование задач обогащения руд, физико-химическое моделирование систем, моделирование телекоммуникационных систем.    Широкая география участников подтверждает актуальность темы конференции и рассматриваемых в её рамках вопросов (Россия, Сербия, Германия, Узбекистан, Казахстан, Кыргызстан).</string>
    <string name="life_text_9">\n В учебном процессе используются результаты научных исследований, проведенных сотрудниками кафедры. По результатам научно-исследовательских работ кафедры защищена 2 докторская, 4 кандидатских диссертации. За годы существования опубликованы более 300 научных и учебно-методических работ, в том числе 8 монографий, 10 учебных пособий, более 400 научных статей в ведущих научных журналах (из списка ВАК), в том числе зарубежных.</string>
    <string name="life_text_10">\n ППС кафедры публикуют научные статьи в различных журналах Кыргызской Республики, дальнего и ближнего зарубежья с ненулевым импакт-фактором. По результатам проведенных исследований за последние 5 лет опубликовано 1 монография, 4 учебник, более 100 научных статей в сборниках материалов конференций</string>
    <string name="life_text_13">\n Компьютерные классы оснащены современным программным обеспечением, позволяющим проводить занятия с использованием новых возможностей.</string>
    <string name="life_text_14">\n Профессорско-преподавательский состав кафедры и студенты обеспечены интернет услугами, Wi-Fi сетью, AVN – системой (Автоматизация учебных процессов); проводится дистантное образование в on-line режиме.</string>
    <string name="life_text_15">\n За выпускающей кафедрой закреплены лаборатории, используемые в процессе проведения лабораторных занятий по соответствующим дисциплинам, для выполнения учебно-исследовательской и научно-исследовательской работы обучающихся:</string>
    <string name="life_text_16">\n <b></b> кафедра «Информационные технологии и математическое моделирование им. акад. А. Жайнакова» 1/67;</string>
    <string name="life_text_17">\n <b></b> кафедра «Информационные технологии и математическое моделирование» 1/68; </string>
</resources>