<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_emblem"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#000"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:text="@string/home_title"/>


        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/home_title_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/short_description"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_technology"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#8B4513"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_amanbekov_janakovih"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_name_ja"
            android:textColor="#000080"
            android:gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_the_words_of_the_director"
            android:textColor="#000080"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            android:gravity="center"
            android:textColor="#000"
            android:layout_marginTop="16sp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/home_paragraph_1"
            android:background="@drawable/text_lines"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/home_paragraph_2"
            android:background="@drawable/text_lines"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/home_paragraph_3"
            android:background="@drawable/text_lines"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/home_paragraph_4"
            android:background="@drawable/text_lines"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/home_paragraph_5"
            android:background="@drawable/text_lines"
            android:textSize="16sp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_image_slider"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_imag_department"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>